--- a/dockermonolith/infra/ansible/playbooks/reddit_container/playbook.yml
+++ b/dockermonolith/infra/ansible/playbooks/reddit_container/playbook.yml
@@ -1,6 +1,9 @@
 ---
-- hosts: all
+- hosts: app
   become: true
+
+  vars:
+    - ansible_python_interpreter: '/usr/bin/python3'
 
   tasks:
     - name: Create otus-reddit app container
