--- a/dockermonolith/infra/terraform/terraform.tfvars.example
+++ b/dockermonolith/infra/terraform/terraform.tfvars.example
@@ -1,4 +1,4 @@
 project          = "docker-123456"
 public_key_path  = "~/.ssh/appuser.pub"
-disk_image       = "ubuntu-1604-xenial-v20200129"
+disk_image       = "docker-base"
 instance_count   = 2
