--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,25 +7,36 @@ services:
     networks:
       - reddit
   ui:
-    build: ./ui
     image: ${USERNAME}/ui:${UI_IMAGE_VERSION}
     ports:
       - ${PUMA_PORT}:${PUMA_PORT}/tcp
     networks:
       - reddit
   post:
-    build: ./post-py
     image: ${USERNAME}/post:${POST_IMAGE_VERSION}
     networks:
       - reddit
   comment:
-    build: ./comment
     image: ${USERNAME}/comment:${COMMENT_IMAGE_VERSION}
     networks:
       - reddit
 
+  prometheus:
+    image: ${USERNAME}/prometheus
+    ports:
+      - '9090:9090'
+    networks:
+      - reddit
+    volumes:
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention=1d'
+
 volumes:
   post_db:
+  prometheus_data:
 
 networks:
   reddit:
