--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -37,6 +37,8 @@ services:
   node-exporter:
     image: prom/node-exporter:v0.15.2
     user: root
+    networks:
+      - reddit
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
