--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,6 @@ services:
     image: ${USERNAME}/comment:${COMMENT_IMAGE_VERSION}
     networks:
       - reddit
-
   prometheus:
     image: ${USERNAME}/prometheus
     ports:
@@ -33,8 +32,7 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention=1d'
-
-  node-exporter:
+  node_exporter:
     image: prom/node-exporter:v0.15.2
     user: root
     networks:
