--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,38 +5,45 @@ services:
     volumes:
       - post_db:/data/db
     networks:
-      - reddit
+      - internal_network
+
   ui:
     image: ${USERNAME}/ui:${UI_IMAGE_VERSION}
     ports:
       - ${PUMA_PORT}:${PUMA_PORT}/tcp
     networks:
-      - reddit
+      - external_network
+      - internal_network
+
   post:
     image: ${USERNAME}/post:${POST_IMAGE_VERSION}
     networks:
-      - reddit
+      - internal_network
+
   comment:
     image: ${USERNAME}/comment:${COMMENT_IMAGE_VERSION}
     networks:
-      - reddit
+      - internal_network
+
   prometheus:
     image: ${USERNAME}/prometheus
     ports:
       - '9090:9090'
     networks:
-      - reddit
+      - internal_network
+      - external_network
     volumes:
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention=1d'
+
   node_exporter:
     image: prom/node-exporter:v0.15.2
     user: root
     networks:
-      - reddit
+      - internal_network
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -51,4 +58,7 @@ volumes:
   prometheus_data:
 
 networks:
-  reddit:
+  internal_network:
+    external: false
+  external_network:
+    external: true
