--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -2,6 +2,16 @@
 global:
   scrape_interval: '5s'
 
+rule_files:
+  - "alerts.yml"
+
+alerting:
+  alertmanagers:
+    - scheme: http
+      static_configs:
+        - targets:
+            - "alertmanager:9093"
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
@@ -33,4 +43,23 @@ scrape_configs:
     static_configs:
       - targets:
           - 'cloudprober_exporter:9313'
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets:
+        - 'cadvisor:8080'
+
+  - job_name: 'post'
+    static_configs:
+      - targets:
+          - 'post:5000'
+
+  - job_name: 'docker'
+    static_configs:
+      - targets: ['35.240.56.5:9323']
+
+  - job_name: 'telegraf'
+    static_configs:
+      - targets: ['telegraf:9126']
+
 ...
