--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -52,9 +52,24 @@ services:
     ports:
       - '8080:8080'
 
+  grafana:
+    image: grafana/grafana:5.0.0
+    networks:
+      - internal_network
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+
 volumes:
   post_db:
   prometheus_data:
+  grafana_data:
 
 networks:
   internal_network:
