add alert manager

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,6 +25,15 @@ services:
     networks:
       - internal_network
 
+  alertmanager:
+    image: ${USER_NAME}/alertmanager
+    networks:
+      - internal_network
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+    ports:
+      - 9093:9093
+
 volumes:
   post_db:
   prometheus_data:
