--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,7 +1,7 @@
 USER_NAME=vpupkin
 PUMA_PORT=9292
-COMMENT_IMAGE_VERSION=1.0
-POST_IMAGE_VERSION=1.0
-UI_IMAGE_VERSION=1.0
+COMMENT_IMAGE_VERSION=latest
+POST_IMAGE_VERSION=latest
+UI_IMAGE_VERSION=latest
 MONGO_IMAGE_VERSION=3.2
-MONGO_EXPORTER_VERSION=v0.10.0
+MONGO_EXPORTER_VERSION=0.10.0
