--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,41 +5,60 @@ services:
     volumes:
       - post_db:/data/db
     networks:
-      - internal_network
+      - backend
 
   ui:
     image: ${USER_NAME}/ui:${UI_IMAGE_VERSION}
+    environment:
+      - POST_SERVICE_HOST=post
+      - POST_SERVICE_PORT=5000
+      - COMMENT_SERVICE_HOST=comment
+      - COMMENT_SERVICE_PORT=9292
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     ports:
       - ${PUMA_PORT}:${PUMA_PORT}/tcp
+    depends_on:
+      - post
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
     networks:
-      - external_network
-      - internal_network
+      - frontend
+      - backend
 
   post:
     image: ${USER_NAME}/post:${POST_IMAGE_VERSION}
     networks:
-      - internal_network
+      - backend
+    environment:
+      - POST_DATABASE_HOST=post_db
+      - POST_DATABASE=posts
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+    depends_on:
+      - post_db
+    ports:
+      - "5000:5000"
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
 
   comment:
     image: ${USER_NAME}/comment:${COMMENT_IMAGE_VERSION}
     networks:
-      - internal_network
-
-  alertmanager:
-    image: ${USER_NAME}/alertmanager
-    networks:
-      - internal_network
-    command:
-      - '--config.file=/etc/alertmanager/config.yml'
-    ports:
-      - 9093:9093
+      - backend
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
 
 volumes:
   post_db:
   prometheus_data:
 
 networks:
-  internal_network:
-    external: false
-  external_network:
+  backend:
+    external: true
+  frontend:
     external: true
