--- a/logging/fluentd/fluent.conf
+++ b/logging/fluentd/fluent.conf
@@ -4,6 +4,12 @@
   bind 0.0.0.0
 </source>
 
+<filter service.post>
+  @type parser
+  format json
+  key_name log
+</filter>
+
 <filter service.ui>
   @type parser
   key_name log
